@@ -1,5 +1,5 @@
 /*
- * $Id: plot2d.h,v 1.17 2015/10/08 20:01:17 sfeam Exp $
+ * $Id: plot2d.h,v 1.18 2015/12/21 20:08:40 sfeam Exp $
  */
 
 /* GNUPLOT - plot2d.h */
@@ -69,5 +69,6 @@ struct text_label *store_label __PROTO((struct text_label *, struct coordinate *
 					int i, char * string, double colorval));
 void parse_plot_title __PROTO((struct curve_points *this_plot, 
 					char *xtitle, char *ytitle, TBOOLEAN *set_title));
+coord_type polar_to_xy __PROTO(( double theta, double r, double *x, double *y, TBOOLEAN update));
 
 #endif /* GNUPLOT_PLOT2D_H */
