@@ -1,5 +1,5 @@
 /*
- * $Id: tables.h,v 1.99 2016/11/03 22:27:21 sfeam Exp $
+ * $Id: tables.h,v 1.100 2016/12/26 23:46:25 sfeam Exp $
  */
 
 /* GNUPLOT - tables.h */
@@ -113,7 +113,7 @@ enum set_id {
     S_ZDATA, S_ZDTICS, S_NOZDTICS, S_ZLABEL, S_ZMTICS, S_NOZMTICS, S_ZRANGE,
     S_ZTICS, S_NOZTICS,
 
-    S_RTICS, S_RRANGE, S_RAXIS, S_PAXIS, S_TTICS, S_MTTICS, 
+    S_RTICS, S_RRANGE, S_RAXIS, S_RLABEL, S_PAXIS, S_TTICS, S_MTTICS, 
 
     S_ZERO, S_ZEROAXIS, S_XZEROAXIS, S_X2ZEROAXIS, S_YZEROAXIS, S_Y2ZEROAXIS,
     S_ZZEROAXIS
